--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.js">
 	</script>
-	<script src="Chart.js"/>
-	</script>
+	<script type="text/javascript" language="javascript" src="Chart.js"></script>
+	<script type="text/javascript" language="javascript" src="foodlog.js"></script>
 </head> 
 
 	
@@ -30,7 +30,7 @@
 	<div data-role="content" >	
 		 <div class="ui-grid-a">
             <div class="ui-block-a">
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" href="#lookup">Lookup</a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" data-ajax="false" href="lookup.html">Lookup</a>
             </div>
             <div class="ui-block-b">
             <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_history" href="#history">History</a>
