--- a/source.html
+++ b/source.html
@@ -7,7 +7,8 @@
 <!-- Place cursor after this and select a
   JavaScript library from the menu above -->
 <script src="Chart.js"></script>
-<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+<!--<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
 <!-- Supports context-sensitive CSS3 auto-completion -->
 <!-- Style starts here. Try adding new CSS tags. -->
