--- a/lookup.html
+++ b/lookup.html
@@ -10,13 +10,15 @@
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>-->
 	<!--<link href="http://code.jquery.com/mobile/latest/jquery.mobile.css" rel="stylesheet" type="text/css" />-->
-	 <link rel="stylesheet" type="text/css" href="jquery.mobile.flatui.css" />
-	<link rel="stylesheet" type="text/css" href="food.css" />
-	 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.js">
-	</script>
-	<script type="text/javascript" language="javascript" src="Chart.js"></script>
-	<script type="text/javascript" language="javascript" src="foodlog.js"></script>
+ <link rel="stylesheet" type="text/css" href="jquery.mobile.flatui.css" />
+<link rel="stylesheet" type="text/css" href="food.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="style.css">
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+ <script src="jquery.raty.min.js"></script>
+ <script src="http://code.jquery.com/mobile/latest/jquery.mobile.js"></script>
+ <script type="text/javascript" src="jquery.quovolver.js"></script>
+	 <script type="text/javascript" src="foodlog.js"></script>
+	  <script type="text/javascript" src="Chart.js"></script>
 	
 
 <script type="text/javascript">
