--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" data-ajax="false" href="lookup.html">Lookup</a>
             </div>
             <div class="ui-block-b">
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_history" href="#history">History</a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_history" href="history.php">History</a>
             </div>
             <div class="ui-block-a">
             <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" href="settings.html">Settings</a>
