--- a/lookup.html
+++ b/lookup.html
@@ -17,9 +17,10 @@
  <script src="jquery.raty.min.js"></script>
  <script src="http://code.jquery.com/mobile/latest/jquery.mobile.js"></script>
  <script type="text/javascript" src="jquery.quovolver.js"></script>
+ 	<script type="text/javascript" src="taffy.js"></script>
 	 <script type="text/javascript" src="foodlog.js"></script>
 	  <script type="text/javascript" src="Chart.js"></script>
-	
+
 
 <script type="text/javascript">
 	
