--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	</script>
 	<script type="text/javascript" language="javascript" src="Chart.js"></script>
 	<script type="text/javascript" language="javascript" src="foodlog.js"></script>
+	<script type="text/javascript" src="taffy.js"></script>
 </head> 
 
 	
