--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.js">
 	</script>
 	<script type="text/javascript" language="javascript" src="Chart.js"></script>
-	<script type="text/javascript" src="taffy.js"></script>
-	<script type="text/javascript" language="javascript" src="foodlog.js"></script>
+	<script type="text/javascript" src="taffy.js"></script>s
+	<script src="jquery.raty.min.js"></script>
+	 <script src="jquery.quovolver.js" type="text/javascript"></script>
+	 <script type="text/javascript" language="javascript" src="foodlog.js"></script>
 	
 </head> 
 
