--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_history" href="history.php">History</a>
             </div>
             <div class="ui-block-a">
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" href="settings.html">Settings</a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" href="settings.html">
+				<img src="images/settings.png" class="ui-li-thumb">
+				Settings</a>
             </div>
             <div class="ui-block-b">
             <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_help" href="#help">Help</a>
@@ -48,9 +50,6 @@
         </div>
 	</div><!-- /content -->
 	
-	<div data-role="footer" data-theme="d">
-		<h4>Page Footer</h4>
-	</div><!-- /footer -->
 </div><!-- /page one -->
 
 <div data-role="page" id="help">
