--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<title>FoodLog</title> 
-	<!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
-	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>-->
-	<!--<link href="http://code.jquery.com/mobile/latest/jquery.mobile.css" rel="stylesheet" type="text/css" />-->
 	 <link rel="stylesheet" type="text/css" href="jquery.mobile.flatui.css" />
 	<link rel="stylesheet" type="text/css" href="food.css" />
-	 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.js">
-	</script>
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script
 	<script type="text/javascript" language="javascript" src="Chart.js"></script>
 	<script type="text/javascript" src="taffy.js"></script>s
 	<script src="jquery.raty.min.js"></script>
