--- a/lookup.html
+++ b/lookup.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>Multi-page template</title> 
+	<title>Lookup</title> 
 	<!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>-->
@@ -30,7 +30,7 @@
 <div data-role="page" id="one">
 
 	<div data-role="header">
-		<h1>Fooddiary</h1>
+		<h1>Lookup</h1>
 	</div><!-- /header -->
 
 	<div data-role="content" >	
@@ -41,7 +41,7 @@
 				<table style='width:100%'>
 					<tr>
 						<td>
-							<input type="search" placeholder="Apple" id="searchField" value="Banane" />
+							<input type="search" placeholder="Apple" id="searchField"/>
 						</td>
 						<td style='font-size:80%; width:7em'>
 							<a href="#" data-role="button" onclick="searchDB();">
