--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 	<div data-role="content" >	
 		 <div class="ui-grid-a">
             <div class="ui-block-a">
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" data-ajax="false" href="lookup.html"><img src="images/search.png" height="50" width="50" ><div align="center">Lookup</div></a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" data-ajax="false" href="lookup.html" data-theme="l" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-l"><img src="images/search_blank.png" height="50" width="50" ><div align="center">Lookup</div></a>
             </div>
             <div class="ui-block-b">
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_history" href="history.php"><img src="images/history.png" height="50" width="50" ><div align="center">History</div></a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_history" href="history.php" data-theme="hi" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-hi"><img src="images/history_blank.png" height="50" width="50" ><div align="center">History</div></a>
             </div>
             <div class="ui-block-a">
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" href="settings.html">
-				<img src="images/settings.png" height="50" width="50" ><div align="center">Settings</div></a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" href="settings.html" data-theme="s" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-s">
+				<img src="images/settings_blank.png" height="50" width="50" ><div align="center">Settings</div></a>
             </div>
             <div class="ui-block-b">
 				
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_help" href="#help"><img src="images/help.png" height="50" width="50" ><div align="center">help</div></a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_help" href="#help" data-theme="he" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-he"><img src="images/help_blank.png" height="50" width="50" ><div align="center">help</div></a>
             </div>
 			
 			
