--- a/help.html
+++ b/help.html
@@ -40,7 +40,7 @@
             <img width="120" height="120" src="images/history.png">
             </div>
             <div class="ui-block-b">
-            	<p>heck out the history to see how your calorie consumption is developing. Get detailed information about the meals you consumed.</p>
+            	<p>Check out the history to see how your calorie consumption is developing. Get detailed information about the meals you consumed.</p>
             </div>
             <div class="ui-block-a">
             <img width="120" height="120" src="images/settings.png">
