--- a/settings.html
+++ b/settings.html
@@ -79,6 +79,11 @@
         <div class="ui-grid-solo">
         	<a href="#" data-role="button" data-theme="g" id="btn_save">Save</a>
         </div>
+		<div data-role="popup" id="popupSaved"  data-theme="g" >
+		</br>
+		  <p style="padding-left:3em;padding-right:3em;">Settings were saved!<p>
+		  </br>
+		</div>
 		<script type="text/javascript">
 		$(document).bind('pageinit',function() {
   
