--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="ui-block-b">
 				
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_help" href="help.html" data-theme="he" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-he" data-prefetch><img src="images/help_blank.png" height="50" width="50" ><div align="center">help</div></a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_help" href="help.html" data-theme="he" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-he" data-prefetch><img src="images/help_blank.png" height="50" width="50" ><div align="center" style="margin-top: -15px">Help</div></a>
             </div>
 			
 			
