--- a/settings.html
+++ b/settings.html
@@ -46,25 +46,25 @@
             	 <input  id="age" type="number" name="quantity" min="1" max="120" value="25">
             </div>
             <div class="ui-block-a">
-            	<p>Height</p>
+            	<p>Height [kg]</p>
             </div>
             <div class="ui-block-b">
             	 <input id="height" type="number" name="quantity" min="50" max="220" value="175">
             </div>
             <div class="ui-block-a">
-            	<p>Weight</p>
+            	<p>Weight [cm]</p>
             </div>
             <div class="ui-block-b">
             	 <input id="weight" type="number" name="quantity" min="20" max="220" value="75">
             </div>
             <div class="ui-block-a">
-            	<p>Daily kCal limit</p>
+            	<p>Per-day limit [kCal]</p>
             </div>
             <div class="ui-block-b">
             	 <input id="daily_limit" type="number" name="quantity" min="1000" max="5000" value="2500">
             </div>
             <div class="ui-block-a">
-            	<p>Meal kCal limit</p>
+            	<p>Per-meal limit [kCal]</p>
             </div>
             <div class="ui-block-b">
             	 <input id="meal_limit" type="number" name="quantity" min="20" max="1500" value="500">
@@ -81,7 +81,7 @@
         </div>
 		<div data-role="popup" id="popupSaved"  data-theme="g" >
 		</br>
-		  <p style="padding-left:3em;padding-right:3em;">Settings were saved!<p>
+		  <p style="padding-left:3em;padding-right:3em;">Settings saved successfully<p>
 		  </br>
 		</div>
 		<script type="text/javascript">
