--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 	<div data-role="content" >	
 		 <div class="ui-grid-a">
             <div class="ui-block-a">
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" data-ajax="false" href="lookup.html" data-theme="l" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-l" data-prefetch><img src="images/search_blank.png" height="50" width="50" ><div align="center">Lookup</div></a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" data-ajax="false" href="lookup.html" data-theme="l" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-l" data-prefetch><img src="images/search_blank.png" height="50" width="50" ><div align="center" style="margin-top: -8px; margin-bottom: 8px">Lookup</div></a>
             </div>
             <div class="ui-block-b">
-            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_history" href="history.php" data-theme="hi" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-hi"><img src="images/history_blank.png" height="50" width="50" ><div align="center">History</div></a>
+            <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_history" href="history.php" data-theme="hi" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-hi"><img src="images/history_blank.png" height="50" width="50" ><div align="center" style="margin-top: -8px; margin-bottom: 8px">History</div></a>
             </div>
             <div class="ui-block-a">
             <a data-role="button" data-icon="arrow-r" data-iconpos="right" id="btn_settings" href="settings.html" data-theme="s" class="ui-btn ui-shadow 					ui-btn-corner-all ui-btn-up-s" data-prefetch>
-				<img src="images/settings_blank.png" height="50" width="50" ><div align="center">Settings</div></a>
+				<img src="images/settings_blank.png" height="50" width="50" ><div align="center" style="margin-top: -8px; margin-bottom: 8px">Settings</div></a>
             </div>
             <div class="ui-block-b">
 				
