--- a/settings.html
+++ b/settings.html
@@ -29,7 +29,7 @@
 	</div>
 
 	<div data-role="content" >	
-		 <div class="ui-grid-a">
+		 <div class="ui-grid-a" style="margin-left: 10%">
             <div class="ui-block-a" style="text-align: right;padding-right: 30px;width:40%">
             	<p>Gender</p>
             </div>
@@ -76,7 +76,7 @@
 
             
         </div>
-        <div class="ui-grid-solo">
+        <div class="ui-grid-solo" style="width: 40%;margin-left: 30%;">
         	<a href="#" data-role="button" data-theme="g" id="btn_save">Save</a>
         </div>
 		<div data-role="popup" id="popupSaved"  data-theme="g" >
