--- a/settings.html
+++ b/settings.html
@@ -30,43 +30,43 @@
 
 	<div data-role="content" >	
 		 <div class="ui-grid-a" style="margin-left: 10%">
-            <div class="ui-block-a" style="text-align: right;padding-right: 30px;width:40%">
+            <div class="ui-block-a" style="text-align: right;padding-right: 2.5%;width:40%">
             	<p>Gender</p>
             </div>
-            <div class="ui-block-b" style="padding-right: 200px;width:40%">
+            <div class="ui-block-b" style="padding-right: 16.5%;width:40%">
             <select name="gender" id="gender">
 			   <option value="male">male</option>
 			   <option value="female">female</option>
 			</select>
             </div>
-             <div class="ui-block-a" style="text-align: right;padding-right: 30px;width:40%">
+             <div class="ui-block-a" style="text-align: right;padding-right: 2.5%;width:40%">
             	<p>Age</p>
             </div>
-            <div class="ui-block-b" style="padding-right: 200px;width:40%">
+            <div class="ui-block-b" style="padding-right: 16.5%;width:40%">
             	 <input  id="age" type="number" name="quantity" min="1" max="120" value="25">
             </div>
-            <div class="ui-block-a" style="text-align: right;padding-right: 30px;width:40%">
+            <div class="ui-block-a" style="text-align: right;padding-right: 2.5%;width:40%">
             	<p>Height [kg]</p>
             </div>
-            <div class="ui-block-b" style="padding-right: 200px;width:40%">
+            <div class="ui-block-b" style="padding-right: 16.5%;width:40%">
             	 <input id="height" type="number" name="quantity" min="50" max="220" value="175">
             </div>
-            <div class="ui-block-a" style="text-align: right;padding-right: 30px;width:40%">
+            <div class="ui-block-a" style="text-align: right;padding-right: 2.5%;width:40%">
             	<p>Weight [cm]</p>
             </div>
-            <div class="ui-block-b" style="padding-right: 200px;width:40%">
+            <div class="ui-block-b" style="padding-right: 16.5%;width:40%">
             	 <input id="weight" type="number" name="quantity" min="20" max="220" value="75">
             </div>
-            <div class="ui-block-a" style="text-align: right;padding-right: 30px;width:40%">
+            <div class="ui-block-a" style="text-align: right;padding-right: 2.5%;width:40%">
             	<p>Per-day limit [kCal]</p>
             </div>
-            <div class="ui-block-b" style="padding-right: 200px;;width:40%">
+            <div class="ui-block-b" style="padding-right: 16.5%;width:40%">
             	 <input id="daily_limit" type="number" name="quantity" min="1000" max="5000" value="2500">
             </div>
-            <div class="ui-block-a" style="text-align: right;padding-right: 30px;width:40%">
+            <div class="ui-block-a" style="text-align: right;padding-right: 2.5%;width:40%">
             	<p>Per-meal limit [kCal]</p>
             </div>
-            <div class="ui-block-b" style="padding-right: 200px;width:40%">
+            <div class="ui-block-b" style="padding-right: 16.5%;width:40%">
             	 <input id="meal_limit" type="number" name="quantity" min="20" max="1500" value="500">
             </div>
 			
