--- a/settings.html
+++ b/settings.html
@@ -58,13 +58,13 @@
             	 <input id="weight" type="number" name="quantity" min="20" max="220" value="75">
             </div>
             <div class="ui-block-a" style="text-align: left;padding-left: 5%;width: 50%;">
-            	<p>Per-day limit [kCal]</p>
+            	<p>Daily limit [kCal]</p>
             </div>
             <div class="ui-block-b" style="padding-right: 5%;width:50%">
             	 <input id="daily_limit" type="number" name="quantity" min="1000" max="5000" value="2500">
             </div>
             <div class="ui-block-a" style="text-align: left;padding-left: 5%;width: 50%;">
-            	<p>Per-meal limit [kCal]</p>
+            	<p>Meal limit [kCal]</p>
             </div>
             <div class="ui-block-b" style="padding-right: 5%;width:50%">
             	 <input id="meal_limit" type="number" name="quantity" min="20" max="1500" value="500">
