--- a/settings.html
+++ b/settings.html
@@ -43,31 +43,31 @@
             	<p>Age</p>
             </div>
             <div class="ui-block-b" style="padding-right: 5%;width:50%">
-            	 <input  id="age" type="number" name="quantity" min="1" max="120" value="25">
+            	 <input  id="age" type="number" name="quantity" min="1" max="120" value="25" style="text-align: center">
             </div>
             <div class="ui-block-a" style="text-align: left;padding-left: 5%;width: 50%;">
             	<p>Height [kg]</p>
             </div>
             <div class="ui-block-b" style="padding-right: 5%;width:50%">
-            	 <input id="height" type="number" name="quantity" min="50" max="220" value="175">
+            	 <input id="height" type="number" name="quantity" min="50" max="220" value="175" style="text-align: center">
             </div>
             <div class="ui-block-a" style="text-align: left;padding-left: 5%;width: 50%;">
             	<p>Weight [cm]</p>
             </div>
             <div class="ui-block-b" style="padding-right: 5%;width:50%">
-            	 <input id="weight" type="number" name="quantity" min="20" max="220" value="75">
+            	 <input id="weight" type="number" name="quantity" min="20" max="220" value="75" style="text-align: center">
             </div>
             <div class="ui-block-a" style="text-align: left;padding-left: 5%;width: 50%;">
             	<p>Daily limit [kCal]</p>
             </div>
             <div class="ui-block-b" style="padding-right: 5%;width:50%">
-            	 <input id="daily_limit" type="number" name="quantity" min="1000" max="5000" value="2500">
+            	 <input id="daily_limit" type="number" name="quantity" min="1000" max="5000" value="2500" style="text-align: center">
             </div>
             <div class="ui-block-a" style="text-align: left;padding-left: 5%;width: 50%;">
             	<p>Meal limit [kCal]</p>
             </div>
             <div class="ui-block-b" style="padding-right: 5%;width:50%">
-            	 <input id="meal_limit" type="number" name="quantity" min="20" max="1500" value="500">
+            	 <input id="meal_limit" type="number" name="quantity" min="20" max="1500" value="500" style="text-align: center">
             </div>
 			
             
