--- a/help.html
+++ b/help.html
@@ -30,23 +30,23 @@
 
 	<div data-role="content" >	
 		 <div class="ui-grid-a">
-            <div class="ui-block-a">
+            <div class="ui-block-a" style="text-align: center">
             <img  width="120" height="120" src="images/search.png">
             </div>
             <div class="ui-block-b">
-			<p>Use the search function to look up the food database for products by textual search</p>
+			<p style="text-align: center; padding-right: 20%">Use the search function to look up the food database for products by textual search</p>
             </div>
-            <div class="ui-block-a">
+            <div class="ui-block-a" style="text-align: center">
             <img width="120" height="120" src="images/history.png">
             </div>
             <div class="ui-block-b">
-            	<p>Check out the history to see how your calorie consumption is developing. Get detailed information about the meals you consumed.</p>
+            	<p style="text-align: center; padding-right: 20%">Check out the history to see how your calorie consumption is developing. Get detailed information about the meals you consumed.</p>
             </div>
-            <div class="ui-block-a">
+            <div class="ui-block-a" style="text-align: center">
             <img width="120" height="120" src="images/settings.png">
             </div>
              <div class="ui-block-b">
-             	<p>Enter you personal information to use the calculated basal metabolic rate as daily calorie limit</p>
+             	<p style="text-align: center; padding-right: 20%">Enter you personal information to use the calculated basal metabolic rate as daily calorie limit</p>
             </div>
        
         </div>
