--- a/help.html
+++ b/help.html
@@ -30,19 +30,19 @@
 
 	<div data-role="content" >	
 		 <div class="ui-grid-a">
-            <div class="ui-block-a" style="text-align: center">
+            <div class="ui-block-a" style="text-align: center; height: 180px; padding-top: 30px;">
             <img  width="120" height="120" src="images/search.png">
             </div>
             <div class="ui-block-b">
 			<p style="text-align: center; padding-right: 20%">Use the search function to look up the food database for products by textual search</p>
             </div>
-            <div class="ui-block-a" style="text-align: center">
+            <div class="ui-block-a" style="text-align: center; height: 180px; padding-top: 30px;">
             <img width="120" height="120" src="images/history.png">
             </div>
             <div class="ui-block-b">
             	<p style="text-align: center; padding-right: 20%">Check out the history to see how your calorie consumption is developing. Get detailed information about the meals you consumed.</p>
             </div>
-            <div class="ui-block-a" style="text-align: center">
+            <div class="ui-block-a" style="text-align: center; height: 180px; padding-top: 30px;">
             <img width="120" height="120" src="images/settings.png">
             </div>
              <div class="ui-block-b">
