--- a/help.html
+++ b/help.html
@@ -33,9 +33,21 @@
             <div class="ui-block-a" style="text-align: center; height: 180px; padding-top: 30px;">
             <img  width="120" height="120" src="images/search.png">
             </div>
-            <div class="ui-block-b">
-			<p style="text-align: center; padding-right: 20%">Use the search function to look up the food database for products by textual search</p>
-            </div>
+			<div align="center" class="ui">
+
+			<div class="chv">
+				<div class="table full-width full-height">        
+					<div class="table-cell align-middle">
+						Use the search function to look up the food database for products by textual search
+					</div>
+				</div>
+			
+			</div>
+			
+		</div>
+            <!--<div class="ui-block-b">
+				<p style="text-align: center; padding-right: 20%">Use the search function to look up the food database for products by textual search</p>
+            </div>-->
             <div class="ui-block-a" style="text-align: center; height: 180px; padding-top: 30px;">
             <img width="120" height="120" src="images/history.png">
             </div>
