--- a/help.html
+++ b/help.html
@@ -40,7 +40,7 @@
 					<div class="chv">
 						<div class="table full-width full-height">        
 							<div class="table-cell align-middle">
-								TESTasdfasdfas dfasdf asdf asdfasdfasdfasdfas dfasdfsadfasdf sdfasdfasd fasdf asd fasdfa sfas fdsad fasdf sadfasd
+								Use the search function to look up the food database for products by textual search.
 							</div>
 						</div>
 					</div>
@@ -50,14 +50,32 @@
             <img width="120" height="120" src="images/history.png">
             </div>
             <div class="ui-block-b">
-            	<p style="text-align: center; padding-right: 20%">Check out the history to see how your calorie consumption is developing. Get detailed information about the meals you consumed.</p>
-            </div>
+            	<!--<p style="text-align: center; padding-right: 20%">Check out the history to see how your calorie consumption is developing. Get detailed information about the meals you consumed.</p>-->
+				<div align="center" class="ui">
+					<div class="chv">
+						<div class="table full-width full-height">        
+							<div class="table-cell align-middle">
+								Check out the history to see how your calorie consumption is developing. Get detailed information about the meals you consumed.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
             <div class="ui-block-a" style="text-align: center; height: 180px; padding-top: 30px;">
             <img width="120" height="120" src="images/settings.png">
             </div>
              <div class="ui-block-b">
-             	<p style="text-align: center; padding-right: 20%">Enter you personal information to use the calculated basal metabolic rate as daily calorie limit</p>
-            </div>
+             	<!--<p style="text-align: center; padding-right: 20%">Enter you personal information to use the calculated basal metabolic rate as daily calorie limit</p>-->
+				<div align="center" class="ui">
+					<div class="chv">
+						<div class="table full-width full-height">        
+							<div class="table-cell align-middle">
+								Edit your personal settings to automatically calculate your basal metabolic rate. Also define personal limits for your maximum calorie intake per day and per meal.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
        
         </div>
 	</div><!-- /content -->
