--- a/help.html
+++ b/help.html
@@ -31,7 +31,7 @@
 	<div data-role="content" >	
 		 <div class="ui-grid-a">
             <div class="ui-block-a" style="text-align: center; height: 210px; padding-top: 55px;">
-            <img  width="100" height="100" src="images/search.png">
+            <img  width="20%" height="auto" src="images/search.png">
             </div>
 			
             <div class="ui-block-b">
