--- a/help.html
+++ b/help.html
@@ -30,8 +30,8 @@
 
 	<div data-role="content" >	
 		 <div class="ui-grid-a">
-            <div class="ui-block-a" style="text-align: center; height: 210px; padding-top: 55px;">
-            <img  width="20%" height="auto" src="images/search.png">
+            <div class="ui-block-a" style="text-align: center; height: 240px; padding-top: 70px;">
+            <img  width="100" height="100" src="images/search.png">
             </div>
 			
             <div class="ui-block-b">
@@ -46,7 +46,7 @@
 					</div>
 				</div>
             </div>
-            <div class="ui-block-a" style="text-align: center; height: 210px; padding-top: 55px;">
+            <div class="ui-block-a" style="text-align: center; height: 240px; padding-top: 70px;">
             <img width="100" height="100" src="images/history.png">
             </div>
             <div class="ui-block-b">
@@ -61,7 +61,7 @@
 					</div>
 				</div>
 			</div>
-            <div class="ui-block-a" style="text-align: center; height: 210px; padding-top: 55px;">
+            <div class="ui-block-a" style="text-align: center; height: 240px; padding-top: 70px;">
             <img width="100" height="100" src="images/settings.png">
             </div>
              <div class="ui-block-b">
