--- a/settings.html
+++ b/settings.html
@@ -81,7 +81,7 @@
         </div>
 		<div data-role="popup" id="popupSaved"  data-theme="g" >
 		</br>
-		  <p style="padding-left:3em;padding-right:3em;">Settings saved successfully<p>
+		  <p style="padding-left:3em;padding-right:3em;text-align: center;">Settings saved successfully<p>
 		  </br>
 		</div>
 		<script type="text/javascript">
