--- a/settings.html
+++ b/settings.html
@@ -76,7 +76,7 @@
 
             
         </div>
-        <div class="ui-grid-solo" style="width: 90%;margin-left: 5%;">
+        <div class="ui-grid-solo" style="width: 90%;margin-left: 5%;background: #AAD041">
         	<a href="#" data-role="button" data-theme="g" id="btn_save">Save</a>
         </div>
 		<div data-role="popup" id="popupSaved"  data-theme="g" >
