--- a/settings.html
+++ b/settings.html
@@ -46,13 +46,13 @@
             	 <input  id="age" type="number" name="quantity" min="1" max="120" value="25" style="text-align: center">
             </div>
             <div class="ui-block-a" style="text-align: left;padding-left: 5%;width: 50%;">
-            	<p>Height [kg]</p>
+            	<p>Height [cm]</p>
             </div>
             <div class="ui-block-b" style="padding-right: 5%;width:50%">
             	 <input id="height" type="number" name="quantity" min="50" max="220" value="175" style="text-align: center">
             </div>
             <div class="ui-block-a" style="text-align: left;padding-left: 5%;width: 50%;">
-            	<p>Weight [cm]</p>
+            	<p>Weight [kg]</p>
             </div>
             <div class="ui-block-b" style="padding-right: 5%;width:50%">
             	 <input id="weight" type="number" name="quantity" min="20" max="220" value="75" style="text-align: center">
