--- a/lookup.html
+++ b/lookup.html
@@ -41,7 +41,7 @@
 				<table style='width:100%'>
 					<tr>
 						<td>
-							<input type="search" placeholder="Apple" id="searchField" value="Apfel"/>
+							<input type="search" placeholder="Enter a product name" id="searchField"/>
 						</td>
 						<td style='font-size:80%; width:7em'>
 							<a href="#" data-role="button" onclick="searchDB();">
